Fix compilation cases